# secretflow

./: .licenserc.yaml  CHANGELOG.md  CONTRIBUTING.md  pdm_build.py  pyproject.toml
.circleci/: config.yml  continue-config.yml  release-config.yml
.github/: CODEOWNERS
.github/workflows/: docs-publish.yml
docker/: comp_list.json  update_meta.py
docker/dev/: Dockerfile  entry.sh
docker/release/: build.sh  python.Dockerfile  ubuntu.Dockerfile
docs/component/: comp_list.md  update_comp_list.py
docs/developer/: index.rst
docs/getting_started/: installation.md
docs/tutorial/: PSI_On_SPU.ipynb  SL_Training_with_compressor.ipynb  index.rst
docs/user_guide/: index.rst
examples/benchmark/: README.md
examples/my_plugin/: README.md  setup.py
secretflow/: __init__.py  cli.py  version.py
secretflow/component/core/: checkpoint.py  config.py  dataframe.py  entry.py  i18n.py  io.py  plugin.py  progressor.py  resources.py
secretflow/component/io/: data_sink.py  data_source.py  identity.py  read_data.py  write_data.py
secretflow/component/model_export/: model_export.py
secretflow/component/postprocessing/: score_card_transformer.py
secretflow/component/preprocessing/: preprocessing.py
secretflow/component/serving_model_inferencer/: serving_model_inferencer.py
secretflow/component/stats/: groupby_statistics.py  ss_pearsonr.py  ss_vif.py  stats_psi.py  table_statistics.py
secretflow/data/: __init__.py  base.py  split.py
secretflow/data/core/: agent.py  base.py  io.py  partition.py
secretflow/data/groupby/: dataframe_groupby.py
secretflow/data/horizontal/: dataframe.py
secretflow/data/io/: oss.py  util.py
secretflow/data/mix/: dataframe.py
secretflow/data/vertical/: dataframe.py  io.py
secretflow/device/: driver.py  proxy.py
secretflow/device/device/: _utils.py  base.py  heu.py  heu_object.py  pyu.py  register.py  spu.py  teeu.py  type_traits.py
secretflow/device/kernels/: heu.py  pyu.py  spu.py  teeu.py
secretflow/distributed/: __init__.py  config.py  op_context.py  op_strategy.py
secretflow/distributed/fed/: api.py  call_holder.py  exception.py  global_context.py
secretflow/distributed/memory/: memory_actor.py
secretflow/kuscia/: datamesh.py  entry.py  meta_conversion.py  ray_config.py
secretflow/ml/cluster/: kmeans.py
secretflow/ml/gaussian_process/: gaussian_process_classifier.py
secretflow/ml/linear/: __init__.py  fl_lr_mix.py  fl_lr_v.py
secretflow/ml/naive_bayes/: gnb.py
secretflow/ml/neighbors/: knn.py
secretflow/preprocessing/: __init__.py  encoder.py  scaler.py
secretflow/preprocessing/binning/: vert_bin_substitution.py  vert_binning_pyu.py  vert_woe_binning.py  vert_woe_binning_pyu.py
secretflow/security/: __init__.py  diffie_hellman.py
secretflow/security/aggregation/: __init__.py  _utils.py  plain_aggregator.py  secure_aggregator.py  spu_aggregator.py
secretflow/security/compare/: __init__.py  device_comparator.py  plain_comparator.py  spu_comparator.py
secretflow/spec/extend/: bin_data_pb2.py
secretflow/stats/: __init__.py  prediction_bias_eval.py  ss_pearsonr_v.py  ss_pvalue_v.py  united_stats.py
secretflow/stats/core/: prediction_bias_core.py
secretflow/utils/: __init__.py  blocked_ops.py  cloudpickle.py  consistent_ops.py  errors.py  hash.py  io.py  logging.py  ndarray_bigint.py  ndarray_encoding.py  secure_pickle.py  sigmoid.py
secretflow/utils/simulation/: datasets.py
tests/: conftest.py
tests/component/core/: test_io.py  test_progresser.py  test_utils.py
tests/component/infra/: test_model_export.py  test_serving_model_inferencer.py  test_sgb_export.py  util.py
tests/component/io/: test_io_ss_glm.py
tests/component/ml/: test_gaussian_naive_bayes.py  test_gaussian_process_classifer.py  test_kmeans.py  test_knn_classifer.py  test_sgb.py  test_ss_sgd.py
tests/component/postprocessing/: test_score_card_transformer.py
tests/component/stats/: test_groupby_statistics.py  test_stats_psi.py
tests/data/: test_partition.py
tests/data/horizontal/: test_hdataframe.py
tests/data/mix/: test_mixdataframe.py
tests/data/vertical/: test_vdataframe.py  test_vdataframe_polars.py
tests/device/: test_base.py  test_driver.py  test_driver_brpc.py  test_heu.py  test_proxy.py  test_psi.py  test_pyu.py  test_spu.py  test_spu_kernel.py  test_teeu.py
tests/kuscia/: test_kuscia.py
tests/preprocessing/: test_ordinal_encoder.py  test_standard_scaler.py  test_vert_binning.py  test_vert_substitution.py
tests/stats/: test_biclassification_eval.py  test_groupby_v.py  test_prediction_bias.py  test_psi.py  test_score_card.py  test_ss_pearsonr_v.py  test_ss_pvalue.py  test_ss_vif_v.py  test_table_statistics.py
tests/utils/: test_testing.py
(+146 files in other folders)
